[fixed] mod-summary height on firefox

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,6 +10,10 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
   padding: 0.2em 0;
 }
 
+.grid {
+ height: 400px;
+}
+
 body {
   padding: 0;
 }
